--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@angular/animations": "~11.1.1",
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
-    "@angular/core": "~11.1.1",
+    "@angular/core": "11.2.14",
     "@angular/forms": "~11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
-    "@aws-amplify/ui-angular": "^4.0.1",
     "aws-amplify": "^5.3.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
